Fix missing contrast in several dialogs

--- a/src/assets/i18n/imprint/imprint.scss
+++ b/src/assets/i18n/imprint/imprint.scss
@@ -4,3 +4,8 @@ p {
   -webkit-hyphens: auto;
   hyphens: auto;
 }
+
+div {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  color: var(--on-surface);
+}
